# heart_tube_project_code

./: Tr_s2_Q2.m  Tr_s2_factors.m  cell_stiffness_fit_residual.m  compositeTissueCalc.m  compute2ptResponse.m  compute_vel_fit_measure.m  create_manuscript_plots.m  embryonicE4NoSerum2hrs.m  engler_data_fit.m  expt_cellgel_vals.m  extract_velocity.m  fitFullParameters.m  halfspace_singlecell_plots.m  lorentzian.m  modulusRenormPow2Fit.m  parameterFitEshelby.m  parameter_best_fit_search.m  parameter_search_eshelby.m  plotConductionInterfere.m  scriptCalculateCompositeModulusFactor.m  singleCellDataFit.m  strain2d.m  threshold_wave_3d_eshelby.m  threshold_wave_3d_solution.m  threshold_wave_solution.m  visualize_sim_data.m
simulation_twofluid/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  data.c  data.h  definesim.c  definesim.h  measure.c  measure.h  parfile_tools.c  parfile_tools.h  runsim  threshold_wave_simulation.c  threshold_wave_simulation.h
simulation_twofluid/.deps/: data.Po  definesim.Po  list.Po  measure.Po  parfile_tools.Po  threshold_wave_simulation.Po
simulation_twofluid/autom4te.cache/: output.0  traces.0  traces.1
